# u-utils

./: .gitignore  README.rst  get_package_version.py  pyproject.toml  requirements.txt  setup.py  setup.py.bkup  utils.py
.semaphore/: pypi_publish.yml  semaphore.yml
other/: gather_colors.py  release_howto.md
tests/: collections_tests.py  colors_test.py  statistics_tests.py  utils_test.py  utils_tests.py
um/: collections.py  utils.py
um/visuals/: color.py
